[package]
name = "maze-solver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
eframe = "0.21.3"
egui = "0.21.0"
im-native-dialog = "0.3.0"
image = "0.24.6"
lazy_static = "1.4.0"
rand = "0.8.5"
rand_distr = "0.4.3"

[profile.release]
debug = 1